# parity-bridges-common

modules/call-dispatch/: Cargo.toml
modules/currency-exchange/: Cargo.toml
modules/ethereum/: Cargo.toml
modules/ethereum-contract/builtin/: Cargo.toml
modules/message-lane/: Cargo.toml
modules/message-lane/rpc/: Cargo.toml
modules/message-lane/src/: weights_ext.rs
modules/shift-session-manager/: Cargo.toml
modules/substrate/: Cargo.toml
primitives/currency-exchange/: Cargo.toml
primitives/ethereum-poa/: Cargo.toml
primitives/kusama/: Cargo.toml
primitives/message-lane/: Cargo.toml
primitives/millau/: Cargo.toml
primitives/millau/src/: lib.rs
primitives/polkadot/: Cargo.toml
primitives/rialto/: Cargo.toml
primitives/rialto/src/: lib.rs
primitives/runtime/: Cargo.toml
relays/ethereum/: Cargo.toml
relays/kusama-client/: Cargo.toml
relays/millau-client/: Cargo.toml
relays/polkadot-client/: Cargo.toml
relays/substrate/: Cargo.toml
relays/substrate-client/: Cargo.toml
relays/utils/: Cargo.toml
